# ezzi.trade

./: .dockerignore  .env.example  AUDIT_REPORT.md  CLAUDE.md  Dockerfile  README.md  deploy.sh  package.json  pnpm-lock.yaml  tsconfig.json
.claude/: settings.local.json
.github/workflows/: fly-deploy.yml
apps/api/: .env.example  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/api/prisma/: schema.prisma
apps/api/scripts/: create-admin.ts  generate-nfts.ts
apps/api/src/: index.ts
apps/api/src/lib/: logger.ts  redis.ts  socket.ts
apps/api/src/middleware/: admin.middleware.ts  auth.ts  rate-limit.ts
apps/api/src/routes/: auth.ts  capsule.ts  escrow.ts  health.ts  marketplace.ts  mining.ts  nft.ts  partners.ts  presale.ts  solana-marketplace.ts  solana-nfts.ts  telegram.ts  user.ts  webhooks.ts
apps/api/src/services/: capsule.service.ts  commission.service.ts  escrow.service.ts  live-feed.service.ts  marketplace.service.ts  mining.service.ts  nft.service.ts  realtime-mining.service.ts  (+1 more)
apps/telegram/: next.config.ts  package.json  tsconfig.json  tsconfig.tsbuildinfo
apps/web/: next.config.ts  package.json  tsconfig.tsbuildinfo
ezzi-world-v1/: .gitignore  fly.toml
ezzi-world-v1/.github/workflows/: deploy.yml
ezzi-world-v1/apps/api/: .env.example  package.json  tsconfig.json
ezzi-world-v1/apps/telegram/: package.json  tsconfig.json
ezzi-world-v1/apps/web/: package.json  tsconfig.json
ezzi-world-v1/programs/: Anchor.toml  Cargo.toml
ezzi-world-v1/programs/token/: Cargo.toml
programs/marketplace/: Cargo.toml
programs/nft/: Cargo.toml
(+138 files in other folders)
