[package]
name = "ezzi-marketplace"
version = "0.1.0"
description = "EZZI World Marketplace Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ezzi_marketplace"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["token"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
solana-program = "1.18"
