[package]
name = "ezzi-nft"
version = "0.1.0"
description = "EZZI World NFT Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "ezzi_nft"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.30.1", features = ["init-if-needed"] }
anchor-spl = { version = "0.30.1", features = ["metadata"] }
spl-token = { version = "4", features = ["no-entrypoint"] }
spl-token-metadata-interface = "0.3.0"
spl-type-length-value = "0.4"
solana-program = "1.18"
